--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,16 +1,9 @@
 ---
-
+import Layout from "../layout/layout.astro";
 ---
 
-<html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body>
-		<h1>Astro</h1>
-	</body>
-</html>
+<Layout title="Alzina o Roure?">
+	<main>
+		<p class="text-amber-300">JOC AQUI</p>
+	</main>
+</Layout>
